Fixed all z-index problems

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -8,6 +8,7 @@
   padding-left: 4rem;
   background: var(--primary-color);
   top: 0;
+  z-index: 1000;
 }
 
 .hamburger {
@@ -100,6 +101,7 @@
   position: absolute;
   left: -17rem;
   top: 150%;
+  z-index: 1000;
 }
 
 .user-dropdown {
@@ -187,6 +189,7 @@
   height: 100%;
   transition: all 0.3s ease;
   color: gray;
+  z-index: 1000;
 }
 
 .is-collapsed .side-menu-item {
